[package]
name = "mathfacts"
version = "0.1.2"
edition = "2021"
license = "BSD-3-Clause"
description = "A small command-line application to practice math facts."
readme = "README.md"
homepage = "https://github.com/genonullfree/mathfacts.git"
repository = "https://github.com/genonullfree/mathfacts.git"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
clap = { version = "3.2.20", features = ["derive"] }
rand = "0.8.5"
thiserror = "1.0.34"
